# body_animation

./: .gitignore  CMakeLists.txt  README.md  SMPL_OpenPose_mapping.txt  main.cpp  run_log_0203.txt  run_log_0204.txt
data/EHF/: ._EHF_README.txt  01_align.ply  02_2Djnt.json  02_align.ply  03_2Djnt.json  03_align.ply  04_2Djnt.json  04_align.ply  05_2Djnt.json  05_align.ply  06_align.ply  07_2Djnt.json  07_align.ply  08_align.ply  09_align.ply  100_2Djnt.json  100_align.ply  10_2Djnt.json  10_align.ply  11_2Djnt.json  11_align.ply  12_2Djnt.json  12_align.ply  13_2Djnt.json  13_align.ply  14_2Djnt.json  14_align.ply  15_2Djnt.json  15_align.ply  16_2Djnt.json  16_align.ply  17_2Djnt.json  17_align.ply  18_2Djnt.json  18_align.ply  19_2Djnt.json  19_align.ply  20_2Djnt.json  20_align.ply  21_2Djnt.json  (+159 more)
data/model/: get_loc.bat  get_loc.py
include/: calculateJointPos.cpp  calculateJointPos.h
